--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -1,4 +1,5 @@
-
+@use "src/styles/utils/vars";
+@use "src/styles/utils/mixins";
 
 .header {
   background-image: url("../../assets/img/background/seedling-gfe77ea329_1280.jpg");
@@ -25,10 +26,16 @@
     font-weight: bold;
     height: 14rem;
     padding: 0 5rem;
+    @include mixins.for-phone-and-tablet-only {
+      width: 80%;
+    }
 
     h1 {
       font-size: 3rem;
       margin-bottom: 1.5rem;
+      @include mixins.for-phone-and-tablet-only {
+        font-size: 2rem;
+      }
     }
   }
 
