--- a/src/Pages/Register/register.scss
+++ b/src/Pages/Register/register.scss
@@ -27,6 +27,18 @@
     box-shadow: 0px 6px 10px rgb(179, 179, 179);
     position: relative;
 
+    .register_success {
+      align-self: center;
+      text-align: center;
+      height: 2.3rem;
+      width: 90%;
+      border: 1px solid vars.$primaryColor;
+      color: vars.$primaryColor;
+      border-radius: 2rem;
+      padding-top: 0.6rem;
+      margin-bottom: 2rem;
+    }
+
     .signup__error {
       color: vars.$colorError;
       font-weight: bold;
@@ -47,8 +59,6 @@
       font-family: vars.$fontTitle;
       color: vars.$colorBlue;
     }
-
-    
 
     .input_box {
       width: 15rem;
@@ -164,7 +174,7 @@
       }
 
       .register_input--success {
-        border-bottom: solid green 2px!important;
+        border-bottom: solid green 2px !important;
         background-color: rgba(0, 128, 0, 0.159);
         border-top-left-radius: 0.2rem;
         border-top-right-radius: 0.2rem;
@@ -174,7 +184,7 @@
     .input_box--error {
       width: 15rem;
       margin: 0 2rem;
-      
+
       i {
         position: absolute;
         right: 69px;
@@ -182,9 +192,8 @@
 
       .fa-check {
         display: none;
-        
       }
-      
+
       .fa-exclamation-circle {
         padding-right: 16px;
         margin-top: 6px;
@@ -215,31 +224,31 @@
         &:focus ~ #labelField-email,
         &:not(:placeholder-shown) ~ #labelField-email {
           transform: translateY(-1em) scale(0.8);
-          left:75px;
+          left: 75px;
         }
 
         &:focus ~ #labelField-password,
         &:not(:placeholder-shown) ~ #labelField-password {
           transform: translateY(-1em) scale(0.8);
-          left:70px;
+          left: 70px;
         }
 
         &:focus ~ #labelField-password-confirm,
         &:not(:placeholder-shown) ~ #labelField-password-confirm {
           transform: translateY(-1em) scale(0.8);
-          left:60px;
+          left: 60px;
         }
 
         &:focus ~ #labelField-firstname,
         &:not(:placeholder-shown) ~ #labelField-firstname {
           transform: translateY(-1em) scale(0.8);
-          left:75px;
+          left: 75px;
         }
 
         &:focus ~ #labelField-lastname,
         &:not(:placeholder-shown) ~ #labelField-lastname {
           transform: translateY(-1em) scale(0.8);
-          left:77px;
+          left: 77px;
         }
       }
 
