--- a/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
+++ b/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
@@ -153,8 +153,11 @@
       .carre35 {
         width: 45rem;
         height: 25rem;
+        @include mixins.for-tablet-portrait-up {
+          width: 30rem;
+          height: 15rem;
+        }
         @include mixins.for-phone-and-tablet-only {
-          width: 25rem;
           height: 15rem;
         }
         @include mixins.for-phone-only {
