fix size plant for mobile and tablet and add size plant with the potager name

--- a/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
+++ b/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
@@ -41,6 +41,16 @@
         font-weight: bold;
         font-family: vars.$fontSecondary;
         color: vars.$color4;
+
+        .potager_size {
+          color: vars.$colorLight;
+          background-color: vars.$colorBlue;
+          border: 2px solid vars.$colorLight;
+          margin-left: 1rem;
+          border-radius: 1rem;
+          padding: 0.4rem;
+          font-size: 0.8rem;
+        }
       }
       .potager_carre {
         border: solid 6px #efc40d;
@@ -78,21 +88,23 @@
 
           img {
             height: 3.5rem;
-            border-radius: 50%;
+            width: 5.25rem;
+            border-radius: 1rem;
             margin: 1.3rem;
             background: vars.$colorLight;
             @include mixins.for-phone-and-tablet-only {
               height: 2rem;
+              width: 3.25rem;
             }
             @include mixins.for-phone-only {
-              height: 1rem;
+              margin: 1.5rem 0.3rem 1rem 0.3rem;
             }
           }
 
           svg {
             position: absolute;
-            right: 20px;
-            top: 16px;
+            right: 10px;
+            top: 8px;
             cursor: pointer;
             font-size: 1.2rem;
             width: 1.2em;
@@ -103,8 +115,9 @@
             border-radius: 50%;
             transition: 0.5s;
             @include mixins.for-phone-only {
-              width: 1rem;
               height: 1rem;
+              right: -1px;
+              top: 14px;
             }
 
             &:hover {
@@ -133,6 +146,7 @@
         height: 14rem;
         @include mixins.for-phone-and-tablet-only {
           width: 30rem;
+          height: 10rem;
         }
         @include mixins.for-phone-only {
           width: 20rem;
@@ -161,7 +175,7 @@
           height: 15rem;
         }
         @include mixins.for-phone-only {
-          width: 25rem;
+          width: 20rem;
         }
       }
     }
