--- a/src/Pages/Connexion/connexion.scss
+++ b/src/Pages/Connexion/connexion.scss
@@ -10,7 +10,6 @@
   background: #f8f9fd;
   height: 100vh;
 
-
   .login_isconnected {
     padding-bottom: 6rem;
     padding-top: 2rem;
@@ -45,6 +44,9 @@
     box-shadow: 0px 6px 10px rgb(179, 179, 179);
     position: relative;
     z-index: 0;
+    @include mixins.for-phone-only {
+      width: 20rem;
+    }
 
     h1 {
       width: 100%;
@@ -94,18 +96,20 @@
         height: 2px;
         transition: all 0.25s cubic-bezier(0.2, 0, 0.03, 1);
         pointer-events: none;
+        left: 79px;
+        @include mixins.for-phone-only {
+          left: 40px;
+        }
       }
 
       #labelField-email {
         position: absolute;
         top: 96px;
-        left: 79px;
       }
 
       #labelField-password {
         position: absolute;
         top: 156px;
-        left: 79px;
       }
     }
     .login_button {
@@ -115,8 +119,12 @@
     }
     p {
       padding-bottom: 0.7rem;
+      @include mixins.for-phone-only {
+        font-size: 0.8rem;
+      }
       span {
         font-weight: bold;
+        margin-left: 0.5rem;
       }
     }
 
