--- a/src/Pages/SpaceUser/profil.scss
+++ b/src/Pages/SpaceUser/profil.scss
@@ -32,8 +32,6 @@
       font-weight: bold;
       font-size: 1.8rem;
       font-family: vars.$fontMenu;
-
-      
     }
   }
 
@@ -145,162 +143,57 @@
         }
       }
     }
-
-    .profil_data--modify {
-      width: 50%;
-      margin-right: 4rem;
-      @include mixins.for-screen-small-medium {
-        margin-right: 0;
-        width: 90%;
-      }
-      .input_modify--active {
-        height: 24rem;
+    .profil_data--right {
+      .profil_data--modify {
         width: 100%;
-        margin-bottom: 1.5rem;
-        transition: all ease-in-out 1s;
-
-        .profil_data--input {
-          display: flex;
-          flex-direction: column;
-          position: relative;
-          margin-bottom: 2.5rem;
-
-          a {
-            font-size: 0.9rem;
-          }
-          #current-password {
-            margin-bottom: 0.5rem;
-          }
-
-          .focus_input {
-            border-bottom: 1px solid vars.$colorBlue;
-          }
-
-          input {
-            display: block;
-            padding: 4px 28px 4px 0px;
-            border: none;
-          }
-
-          label {
-            position: absolute;
-            top: 0;
-            padding: 4px 0px;
-            pointer-events: none;
-            transition: transform 0.2s ease 0s, font-size 0.2s ease 0s,
-              color 0.2s ease 0s;
-            color: rgba(23, 20, 45, 0.8);
-            transform: translateY(-100%);
-            font-size: 10px;
-            line-height: 1.5;
-          }
+        @include mixins.for-screen-small-medium {
+          margin-right: 0;
+          width: 90%;
         }
+        .input_modify--active {
+          height: 24rem;
+          width: 100%;
+          margin-bottom: 1.5rem;
+          transition: all ease-in-out 1s;
 
-        button {
-          width: 7rem;
-          border-radius: 2rem;
-          padding: 0.5rem 0;
-          border: none;
-          background: vars.$primaryColor;
-          color: vars.$colorLight;
-          font-weight: bold;
-          margin-right: 0.5rem;
-          font-size: 1rem;
-        }
-      }
+          .profil_data--input {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            margin-bottom: 2.5rem;
 
-      .input_modify {
-        display: flex;
-        flex-direction: column;
-        height: 11rem;
-        width: 100%;
-        margin-bottom: 1.5rem;
-        transition: all ease-out 1s;
+            a {
+              font-size: 0.9rem;
+            }
+            #current-password {
+              margin-bottom: 0.5rem;
+            }
 
-        .profil_data--input {
-          display: flex;
-          flex-direction: column;
-          position: relative;
-          margin-bottom: 2.5rem;
+            .focus_input {
+              border-bottom: 1px solid vars.$colorBlue;
+            }
 
-          .focus_input {
-            border-bottom: 1px solid vars.$colorBlue;
-          }
+            input {
+              display: block;
+              padding: 4px 28px 4px 0px;
+              border: none;
+            }
 
-          input {
-            display: block;
-            padding: 4px 28px 4px 0px;
-            border: none;
-            appearance: none;
-            border-radius: 0px;
-            background-color: transparent;
-            text-overflow: ellipsis;
-
-            &:read-only {
-              cursor: default;
+            label {
+              position: absolute;
+              top: 0;
+              padding: 4px 0px;
+              pointer-events: none;
+              transition: transform 0.2s ease 0s, font-size 0.2s ease 0s,
+                color 0.2s ease 0s;
+              color: rgba(23, 20, 45, 0.8);
+              transform: translateY(-100%);
+              font-size: 10px;
+              line-height: 1.5;
             }
           }
 
-          label {
-            position: absolute;
-            top: 0;
-            padding: 4px 0px;
-            pointer-events: none;
-            transition: transform 0.2s ease 0s, font-size 0.2s ease 0s,
-              color 0.2s ease 0s;
-            color: rgba(23, 20, 45, 0.8);
-            transform: translateY(-100%);
-            font-size: 10px;
-            line-height: 1.5;
-          }
-        }
-
-        button {
-          width: 7rem;
-          border-radius: 2rem;
-          padding: 0.5rem 0;
-          border: none;
-          background: vars.$primaryColor;
-          color: vars.$colorLight;
-          font-weight: bold;
-          margin-bottom: 1rem;
-          font-size: 1rem;
-        }
-
-        .profil_data--email {
-          display: flex;
-          position: relative;
-          margin-top: 0.5rem;
-
-          input {
-            display: block;
-            padding: 4px 28px 4px 0px;
-            border: none;
-            appearance: none;
-            border-radius: 0px;
-            background-color: transparent;
-            text-overflow: ellipsis;
-            font-weight: 500;
-
-            &:read-only {
-              cursor: default;
-            }
-          }
-
-          label {
-            position: absolute;
-            top: 0;
-            padding: 4px 0px;
-            pointer-events: none;
-            transition: transform 0.2s ease 0s, font-size 0.2s ease 0s,
-              color 0.2s ease 0s;
-            color: rgba(23, 20, 45, 0.8);
-            transform: translateY(-100%);
-            font-size: 10px;
-            line-height: 1.5;
-          }
-
-          .button_email {
+          button {
             width: 7rem;
             border-radius: 2rem;
             padding: 0.5rem 0;
@@ -308,7 +201,132 @@
             background: vars.$primaryColor;
             color: vars.$colorLight;
             font-weight: bold;
+            margin-right: 0.5rem;
             font-size: 1rem;
+          }
+        }
+
+        .input_modify {
+          display: flex;
+          flex-direction: column;
+          height: 11rem;
+          width: 100%;
+          margin-bottom: 1.5rem;
+          transition: all ease-out 1s;
+
+          .profil_data--input {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            margin-bottom: 2.5rem;
+
+            .focus_input {
+              border-bottom: 1px solid vars.$colorBlue;
+            }
+
+            input {
+              display: block;
+              padding: 4px 28px 4px 0px;
+              border: none;
+              appearance: none;
+              border-radius: 0px;
+              background-color: transparent;
+              text-overflow: ellipsis;
+
+              &:read-only {
+                cursor: default;
+              }
+            }
+
+            label {
+              position: absolute;
+              top: 0;
+              padding: 4px 0px;
+              pointer-events: none;
+              transition: transform 0.2s ease 0s, font-size 0.2s ease 0s,
+                color 0.2s ease 0s;
+              color: rgba(23, 20, 45, 0.8);
+              transform: translateY(-100%);
+              font-size: 10px;
+              line-height: 1.5;
+            }
+          }
+
+          button {
+            width: 7rem;
+            border-radius: 2rem;
+            padding: 0.5rem 0;
+            border: none;
+            background: vars.$primaryColor;
+            color: vars.$colorLight;
+            font-weight: bold;
+            margin-bottom: 1rem;
+            font-size: 1rem;
+          }
+
+          .profil_data--email {
+            display: flex;
+            position: relative;
+            margin-top: 0.5rem;
+
+            input {
+              display: block;
+              padding: 4px 28px 4px 0px;
+              border: none;
+              appearance: none;
+              border-radius: 0px;
+              background-color: transparent;
+              text-overflow: ellipsis;
+              font-weight: 500;
+
+              &:read-only {
+                cursor: default;
+              }
+            }
+
+            label {
+              position: absolute;
+              top: 0;
+              padding: 4px 0px;
+              pointer-events: none;
+              transition: transform 0.2s ease 0s, font-size 0.2s ease 0s,
+                color 0.2s ease 0s;
+              color: rgba(23, 20, 45, 0.8);
+              transform: translateY(-100%);
+              font-size: 10px;
+              line-height: 1.5;
+            }
+
+            .button_email {
+              width: 7rem;
+              border-radius: 2rem;
+              padding: 0.5rem 0;
+              border: none;
+              background: vars.$primaryColor;
+              color: vars.$colorLight;
+              font-weight: bold;
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+      .profil_data--avatar {
+        .button_box {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          button {
+            width: 7rem;
+            border-radius: 2rem;
+            padding: 0.5rem 0;
+            margin-bottom: 1rem;
+            margin-right: 0.5rem;
+            border: none;
+            background: vars.$primaryColor;
+            color: vars.$colorLight;
+            font-weight: bold;
+            font-size: 1rem;
+            align-self: center;
           }
         }
       }
