--- a/src/Pages/SpaceUser/profil.scss
+++ b/src/Pages/SpaceUser/profil.scss
@@ -144,6 +144,7 @@
       }
     }
     .profil_data--right {
+      width: 30%;
       .profil_data--modify {
         width: 100%;
         @include mixins.for-screen-small-medium {
@@ -311,22 +312,101 @@
         }
       }
       .profil_data--avatar {
-        .button_box {
-          display: flex;
-          flex-direction: row;
-          justify-content: flex-start;
-          button {
-            width: 7rem;
-            border-radius: 2rem;
-            padding: 0.5rem 0;
-            margin-bottom: 1rem;
-            margin-right: 0.5rem;
-            border: none;
-            background: vars.$primaryColor;
-            color: vars.$colorLight;
+        border-radius: 8px;
+        background-color: rgb(255, 255, 255);
+        box-shadow: 0px 4px 10px rgb(179, 179, 179);
+        color: rgb(23, 20, 45);
+        height: 15.4rem;
+        width: 100%;
+        padding: 2rem 2rem;
+        margin-right: 2.5rem;
+        &:hover {
+          box-shadow: 0px 4px 8px rgb(83, 87, 87);
+        }
+        @include mixins.for-screen-small-medium {
+          margin-right: 0;
+          margin-bottom: 2rem;
+          width: 90%;
+        }
+
+        h2 {
+          font-weight: bold;
+          font-size: 1.5rem;
+        }
+
+        .profil_data--avatar--box {
+          .profil_data--avatar--middle {
+            display: flex;
+            margin-top: 1rem;
+            margin: 1rem 0 0.8rem 0;
+
+            .profil_data--avatar--input {
+              display: flex;
+              flex-direction: column;
+
+              .input_avatar {
+                width: 70%;
+                margin: 1rem 0 2.5rem 0;
+
+                &::-webkit-file-upload-button {
+                  visibility: hidden;
+                }
+                &::before {
+                  content: "Choisir une image";
+                  display: inline-block;
+                  background: linear-gradient(top, #f9f9f9, #e3e3e3);
+                  border: 1px solid #999;
+                  border-radius: 3px;
+                  padding: 5px 8px;
+                  outline: none;
+                  white-space: nowrap;
+                  -webkit-user-select: none;
+                  cursor: pointer;
+                  text-shadow: 1px 1px #fff;
+                  font-weight: 700;
+                  font-size: 10pt;
+                  &:hover {
+                    border-color: black;
+                  }
+                  &:active {
+                    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+                  }
+                }
+              }
+
+              .button_box {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                button {
+                  width: 7rem;
+                  border-radius: 2rem;
+                  padding: 0.5rem 0;
+                  margin-bottom: 0.5rem;
+                  margin-right: 0.5rem;
+                  border: none;
+                  background: vars.$primaryColor;
+                  color: vars.$colorLight;
+                  font-weight: bold;
+                  font-size: 1rem;
+                  align-self: center;
+                }
+              }
+            }
+            .avatar_preview {
+              width: 6.5rem;
+              height: auto;
+              border-radius: 1rem;
+            }
+          }
+          .avatar_error {
+            color: red;
             font-weight: bold;
-            font-size: 1rem;
-            align-self: center;
+          }
+
+          .avatar_sucess {
+            color: green;
+            font-weight: bold;
           }
         }
       }
