add modal confirm delete carre

--- a/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
+++ b/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
@@ -77,6 +77,7 @@
           h3 {
             color: #111;
             font-size: 16px;
+            margin-bottom: 1rem;
           }
 
           .button_confirm {
