modify button for confirm user delete account

--- a/src/Pages/SpaceUser/DialogConfirmDeleteUser/dialog.scss
+++ b/src/Pages/SpaceUser/DialogConfirmDeleteUser/dialog.scss
@@ -4,7 +4,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.801);
+    z-index: 2000;
 
     .dialog_inner {
       display: flex;
